コンパクトテーマなどを追加

--- a/app/javascript/styles/compact/diff.scss
+++ b/app/javascript/styles/compact/diff.scss
@@ -8,10 +8,10 @@
   justify-content: center;
   max-height: 17px;
   padding-top: 2px;
+  z-index: 200; //NSFW(z-index:100)より上にする
   &:hover {
     opacity: 0.9;
     background-color: black;
     max-height: 26px;
-    z-index: 2;
   }
 }
