--- a/app/javascript/styles/twitama.scss
+++ b/app/javascript/styles/twitama.scss
@@ -3,3 +3,5 @@
 @import 'mastodon-light/diff';
 @import 'compact/diff';
 @import 'compact-light/diff';
+@import 'nomargin/diff';
+@import 'twitama/diff';
